src/objects/Opportunity_Rate_Plan_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Code__c</fullName>
        <label>Accounting Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Quantity__c</fullName>
        <label>Committed Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Discount Percent</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discount_Type__c</fullName>
        <description>This determines the type of discount(i.e discount applied by Value or Percentage).</description>
        <inlineHelpText>This determines the type of discount(i.e discount applied by Value or Percentage).</inlineHelpText>
        <label>Discount Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By Percentage</fullName>
                </value>
                <value>
                    <fullName>By Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount_Value__c</fullName>
        <label>Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Product_Editable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Price Editable in Opportunity Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Customer_Spend__c</fullName>
        <label>Max Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Customer_Spend__c</fullName>
        <label>Min Customer Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Total__c</fullName>
        <label>Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Rate_Plan__c</fullName>
        <label>Opportunity Rate Plan</label>
        <referenceTo>Opportunity_Rate_Plan__c</referenceTo>
        <relationshipLabel>Opportunity Rate Plan Charges</relationshipLabel>
        <relationshipName>Opportunity_Rate_Plan_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Rate Plan Charges</relationshipLabel>
        <relationshipName>Opportunity_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Other_Charges__c</fullName>
        <label>% of Other Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Price_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <label>Pricing Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Pricing_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Bundle_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Bundle Line</label>
        <referenceTo>Product_Bundle_Line__c</referenceTo>
        <relationshipLabel>Opportunity Rate Plan Charges</relationshipLabel>
        <relationshipName>Opportunity_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Charge_Category__c</fullName>
        <label>Product Charge Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Non Taxable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Charge</label>
        <referenceTo>Product_Rate_Plan_Charge__c</referenceTo>
        <relationshipLabel>Opportunity Rate Plan Charges</relationshipLabel>
        <relationshipName>Opportunity_Rate_Plan_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <label>Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Row_Total__c</fullName>
        <formula>Price__c - Discount_Value__c + VAT__c + Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscription Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <label>Tax Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Percentage_Applied__c</fullName>
        <label>Tax Percentage Applied</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Of_Measurement__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Uplift__c</fullName>
        <label>Uplift %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Percentage_Applied__c</fullName>
        <label>VAT Percentage Applied</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Opportunity Rate Plan Charge</label>
    <nameField>
        <label>Opportunity Rate Plan Charge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Rate Plan Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>